tests/baselines/reference/setterWithReturn.errors.txt
==== tests/cases/compiler/setterWithReturn.ts (2 errors) ====
    class C234 {
        public set p1(arg1) {
            if (true) {
                return arg1;
                       ~~~~
!!! error TS2122: Setters cannot return a value.
            }
            else {
                return 0;
                       ~
!!! error TS2122: Setters cannot return a value.
            }
       }
    }